[package]
name = "pubky-homeserver-mvp"
version = "0.1.0"
edition = "2021"
authors = ["GitMVP <gitmvp@example.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
bytes = "^1.10.0"
clap = { version = "4.5.29", features = ["derive"] }
heed = "0.21.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dirs = "6.0.0"
